--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.2</junit.version>
+        <jar.name.first>OnlineServicesEmulator</jar.name.first>
+        <jar.name.second>OnlineServicesEmulator-1.0-SNAPSHOT</jar.name.second>
     </properties>
 
     <dependencies>
@@ -83,17 +85,22 @@
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.example.onlineservicesemulator.OnlineServicesEmulator</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>shade-first-jar</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <finalName>${jar.name.first}</finalName>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
